--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ plugins {
 }
 
 android {
-    namespace 'io.myreminder'
+    namespace 'io.myreminderapp'
     compileSdk 33
 
     defaultConfig {
-        applicationId "io.myreminder"
+        applicationId "io.myreminderapp"
         minSdk 24
         targetSdk 33
         versionCode 1
