--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
-        android:name=".runtime.RemindMeApplication"
+        android:name="io.myreminder.runtime.RemindMeApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,10 +16,10 @@
         android:theme="@style/Theme.RemindMe"
         tools:targetApi="31">
 
-        <receiver android:name=".receiver.ReminderReceiver"/>
+        <receiver android:name="io.myreminder.receiver.ReminderReceiver" />
 
         <activity
-            android:name=".runtime.MainActivity"
+            android:name="io.myreminder.runtime.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.RemindMe">
